kubernetes-deployment/traefik-deployment/traefil-deployement.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: 8000
    - name: websecure
      port: 443
      targetPort: 8443
  selector:
    app: traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v3.0
          args:
            - "--api.insecure=true"
            - "--providers.kubernetescrd"
            - "--providers.kubernetesingress"
            - "--entrypoints.web.address=:8000"
            - "--entrypoints.websecure.address=:8443"
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 8443
            - name: admin
              containerPort: 8080
