kubernetes-deployment/traefik-deployment/car-keeper-api-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: car-keeper-api
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: car-keeper-api
          port: 8080
